<resources>
    <string name="app_name">Movie Catalogue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_movie_text">Favorite Movie</string>
    <string name="tab_tv_show_text">Favorite Tv Show</string>
    <string name="tv_show">Tv Show</string>
    <string name="movie">Movie</string>
    <string name="title">Judul</string>
    <string name="poster">Poster</string>
    <string name="overview">Overview</string>
    <string name="director">Director</string>
    <string name="release_date">Tanggal Rilis</string>
    <string name="runtime">Durasi</string>
    <string name="genre">Genre</string>
    <string name="favorite">Favorite</string>
    <string name="no_favorite_movie">Anda belum menambahkan Movie Favorite</string>
    <string name="no_favorite_tv_show">Anda belum menambahkan Tv Show Favorite</string>
    <string name="banner_movie">Banner Movie</string>
    <string name="banner_tv_show">Banner Tv Show</string>

</resources>
