<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryLight"
    tools:context=".ui.favorite.FavoriteTvShowFragment">

    <ProgressBar
        android:id="@+id/progressbar_favorite_tv_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txt_no_favorite_tv_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_favorite_tv_show"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="32dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_favorite_tv_show"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding"/>
</androidx.constraintlayout.widget.ConstraintLayout>