...
                        android:layout_marginTop="@dimen/padding"
                        android:layout_marginStart="@dimen/padding"
                        android:layout_marginLeft="@dimen/padding"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/txt_content_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:textColor="@android:color/white"/>
...
